--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,3 +1,9 @@
 <resources>
-    <string name="app_name">Welcome to the Pluto20 App</string>
+    <string name="app_name">Pluto20 App</string>
+    <string name="greeting_text">Hello Vadim</string>
+    <string name="help_text">Help</string>
+    <string name="start_text">Start</string>
+    <string name="delete_text">Delete acc</string>
+    <string name="test_text">Test</string>
+    <string name="post_text">Post</string>
 </resources>
