Stand nach dem 6 Termin

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -15,4 +15,6 @@
     <string name="deleteacc_text">Delete account</string>
     <string name="writing_text">Test Writing to Database</string>
 
+    <string name="simulate_crash">Test Writing to Database</string>
+
 </resources>
