--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -13,8 +13,7 @@
     <string name="createacc_text">Create account</string>
     <string name="manageacc_text">Manage account</string>
     <string name="deleteacc_text">Delete account</string>
-    <string name="writing_text">Test Writing to Database</string>
 
-    <string name="simulate_crash">Test Writing to Database</string>
+    <string name="simulate_crash">Simulate Crash</string>
 
 </resources>
